# sidecar-eq

./: .gitignore  .pre-commit-config.yaml  AUDIO_SOURCES_GUIDE.md  BUILD_NOTES.md  CHANGES.md  DOCUMENTATION.md  EQ_INTEGRATION_COMPLETE.md  EXPLICIT_SAVE_SETTINGS.md  JGEILS_ISSUE_FIX.md  LICENSE  METADATA_CACHING.md  ONLINE_METADATA.md  README.md  ROADMAP.md  SEARCH_GUIDE.md  SOFTWARE_ASSESSMENT.md  TABLE_MODERNIZATION.md  TODO.md  VERSION_GOALS.md  WELCOME_AUDIO_SPEC.md  build.sh  build_appimage.sh  build_config.py  build_dir.sh  build_standalone.sh  create_eq_test_files.py  get_plex_token.py  index_queue_files.py  pyproject.toml  run_sidecar.py  setup_py2app.py  test_integration.py  test_library.py  test_plex_playback.py  test_qt_plugins.py  test_queue_persistence.py  test_source_default.py  test_url_handling.py  test_video_extraction.py
.github/workflows/: build-releases.yml  ci.yml
assets/: README.md
dist_dir/SidecarEQ/_internal/: libFLAC.so.12  libICE.so.6  libLerc.so.4  libQt6Bluetooth.so.6  libQt6Designer.so.6  libQt6DesignerComponents.so.6  libQt6EglFsKmsGbmSupport.so.6  libQt6FFmpegStub-crypto.so.3  (+165 more)
docs/: ALBUM_ARTIST_SUPPORT.md  ANALYSIS_SUMMARY.md  BACKGROUND_ANALYSIS_SUMMARY.md  EQ_IMPLEMENTATION.md  INITIAL_SEARCH.md  LAYOUT_RENAME.md  MODERN_UI_IMPROVEMENTS.md  MONETIZATION_STRATEGY.md  PLAY_COUNT_EQ_FIXES.md  PLEX_HOME_USER_SETUP.md  PLEX_INTEGRATION.md  PLEX_SETUP_GUIDE.md  PRODUCT_VISION.md  PROTOCOL_LICENSE  QUEUE_PERSISTENCE.md  README.md  REFACTORING_SUMMARY.md  SAVE_BUTTON_IMPROVEMENTS.md  SEARCH_WELCOME_PANEL.md  STEM_MIXING_QUICK_REF.md  STEM_MIXING_VISION.md  VIDEO_AUDIO_EXTRACTION.md  VIEW_LAYOUT_PHILOSOPHY.md  WEBSITE_URL_FIX.md
examples/: Black_Sabbath-Supernaut-VocalsForward.sidecar
scripts/: README.md  build.sh  build_config.py  diagnose_jgeils.py  import_plex_to_library.py  setup.py  setup_py2app.py
sidecar_eq/: analyzer.py  app.py  app.py.bak  audio_engine.py  audio_engine_old.py  audio_sources.py  collapsible_panel.py  indexer.py  library.py  library_browser.py  logging_config.py  metadata.py  metadata_cache.py  metadata_extractor.py  modern_ui.py  music_metadata.py  online_metadata.py  play_state_delegate.py  player.py  playlist.py  plex_account_manager.py  plex_browser.py  plex_helpers.py  queue_model.py  rack.py  scrolling_label.py  search.py  settings_panel.py  star_rating_delegate.py  store.py  url_cache.py  video_extractor.py  workers.py  yt_helper.py
sidecar_eq/eq/: __init__.py  eq_manager.py  volume_manager.py
sidecar_eq/playback/: __init__.py
sidecar_eq/ui/: __init__.py  beam_slider.py  led_meter.py
sidecar_eq/ui_builders/: __init__.py  styles.py
tests/: README.md  conftest.py  smoke_test.py  test_analysis.py  test_audio_engine.py  test_background_analysis.py  test_eq_7_band.py  test_eq_analysis.py  test_eq_frequencies.py  test_eq_interface.py  test_eq_prototype.py  test_file_validation.py  test_integration.py  test_online_metadata.py  test_play_count_eq.py  test_plex_simple.py  test_ui.py  test_url_integration.py  test_workers.py
tools/: test_player_ui.py
(+34 files in other folders)
