[project]
name = "sidecar-eq"
version = "0.2a0"
description = "Queue-first player with per-track EQ via analysis + taste curve."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.7",
  "librosa>=0.10",
  "soundfile>=0.12",
  "numpy",
  "scipy",
  "pyqtgraph",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sidecar_eq"]

[project.optional-dependencies]
yt = ["yt-dlp"]
