[project]
name = "sidecar-eq"
version = "0.7a0"
description = "Educational audio player with thermometer-style EQ interface for music analysis and per-track customization."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.7",
  "librosa>=0.10",
  "soundfile>=0.12",
  "numpy",
  "scipy",
  "pyqtgraph",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sidecar_eq"]

[project.optional-dependencies]
yt = ["yt-dlp"]
